macviews: fix menu closure when click hits a parent menu

This change:

1) Has MenuController reset the closure animation once ::Cancel runs, since it
   is legal for the MenuController to remain alive after ::Cancel (in fact this
   is how submenus work);
2) Has the menu closure animation in ::RepostEventAndCancel() target the active
   submenu instead of the root submenu when closing the outermost menu.

into invisibility but in fact only the outermost one is really dismissed,
leaving the other menu windows with invisible mouse capture.

Bug: 893085,897045
Change-Id: I839710cc525856b14bd3995707ab253cb3258f5f
Reviewed-on: https://chromium-review.googlesource.com/c/1293792
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601696}
Former-commit-id: edbe0951624f7920397dd7fd0d77cc76781842c4